--- a/class_sign-up.html
+++ b/class_sign-up.html
@@ -45,7 +45,7 @@
 
         <!-- ANYTHING ABOVE THIS POINT IS THE ABOUT US SECTION AND MUST BE THE SAME ON EVERY PAGE -->
 
-        div class="aboutUs">
+        <div class="aboutUs">
             <h1>About Us:</h1>
             <p class="aboutUsText">We’re currently pledge members at Kappa Theta Pi, and are driven by the belief that technology can make a positive impact on the world. Our goal is to help our peers grow not just as a coder, but as a person who uses their skills to do good. Through collaboration, mentorship, and community, we strive to build a future where technology is used for meaningful and lasting change.</p>
 
